src/test/ui/issues/issue-6596-2.stderr
error: unknown macro variable `nonexistent`
  --> $DIR/issue-6596-2.rs:15:16
   |
LL |         { $inp $nonexistent }
   |                ^^^^^^^^^^^^ unknown macro variable
...
LL |     g!(foo);
   |     -------- in this macro invocation

error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `nonexistent`
  --> $DIR/issue-6596-2.rs:15:16
   |
LL |         { $inp $nonexistent }
   |                ^^^^^^^^^^^^ expected one of 8 possible tokens here
...
LL |     g!(foo);
   |     -------- in this macro invocation

error: aborting due to 2 previous errors

